5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1667_2974.log
== TEST (2019-04-16 16:17:39) 
-- CODE:
acaiQtde = float(input("Quantidade de acai: "))
salgadoQtde = float(input("Quantidade de salgado"))
valorPago = float(input("Valor pago pelo cliente: "))

acai = 24
salgado = 3

valorTotal = (acai * acaiQtde) + (salgado * salgadoQtde)


-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:18:11) 
-- CODE:
acaiQtde = float(input("Quantidade de acai: "))
salgadoQtde = float(input("Quantidade de salgado: "))
valorPago = float(input("Valor pago pelo cliente: "))

acai = 24
salgado = 3

valorTotal = (acai * acaiQtde) + (salgado * salgadoQtde)

print (valorTotal)
-- OUTPUT:
12003.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:20:51) 
-- CODE:
acaiQtde = float(input("Quantidade de acai: "))
salgadoQtde = float(input("Quantidade de salgado: "))
valorPago = float(input("Valor pago pelo cliente: "))

acai = 24
salgado = 3

valorTotal = (acai * acaiQtde) + (salgado * salgadoQtde)

if valorTotal <= valorPago:
	mensagem = "Sim"
else:
	mensagem = "Nao"


print (round(valorTotal,2))
print (mensagem)
-- EXECUTION TIME:
0.187458
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
12003.0
Nao
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
4800.0
Nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:21:19) 
-- CODE:
acaiQtde = float(input("Quantidade de acai: "))
salgadoQtde = float(input("Quantidade de salgado: "))
valorPago = float(input("Valor pago pelo cliente: "))

acai = 24
salgado = 3

valorTotal = (acai * acaiQtde) + (salgado * salgadoQtde)

if valorTotal <= valorPago:
	mensagem = 'Sim'
else:
	mensagem = 'Nao'


print (round(valorTotal,2))
print (mensagem)
-- EXECUTION TIME:
0.197147
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
12003.0
Nao
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
4800.0
Nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:21:24) 
-- CODE:
acaiQtde = float(input("Quantidade de acai: "))
salgadoQtde = float(input("Quantidade de salgado: "))
valorPago = float(input("Valor pago pelo cliente: "))

acai = 24
salgado = 3

valorTotal = (acai * acaiQtde) + (salgado * salgadoQtde)

if valorTotal <= valorPago:
	mensagem = 'Sim'
else:
	mensagem = 'Nao'


print (round(valorTotal,2))
print (mensagem)
-- OUTPUT:
12003.0
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:21:37) 
-- CODE:
acaiQtde = float(input("Quantidade de acai: "))
salgadoQtde = float(input("Quantidade de salgado: "))
valorPago = float(input("Valor pago pelo cliente: "))

acai = 24
salgado = 3

valorTotal = (acai * acaiQtde) + (salgado * salgadoQtde)

if valorTotal <= valorPago:
	mensagem = 'Sim'
else:
	mensagem = 'Nao'


print (round(valorTotal,2))
print (mensagem)
-- EXECUTION TIME:
0.15474
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
12003.0
Nao
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
4800.0
Nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:21:51) 
-- CODE:
acaiQtde = float(input("Quantidade de acai: "))
salgadoQtde = float(input("Quantidade de salgado: "))
valorPago = float(input("Valor pago pelo cliente: "))

acai = 24
salgado = 3

valorTotal = (acai * acaiQtde) + (salgado * salgadoQtde)

if valorTotal <= valorPago:
	mensagem = 'Sim'
else:
	mensagem = 'Nao'


print (round(valorTotal,2))
print (mensagem)
-- OUTPUT:
12003.0
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:22:37) 
-- CODE:
acaiQtde = float(input("Quantidade de acai: "))
salgadoQtde = float(input("Quantidade de salgado: "))
valorPago = float(input("Valor pago pelo cliente: "))

acai = 24/1000
salgado = 3

valorTotal = (acai * acaiQtde) + (salgado * salgadoQtde)

if valorTotal <= valorPago:
	mensagem = 'Sim'
else:
	mensagem = 'Nao'


print (round(valorTotal,2))
print (mensagem)
-- EXECUTION TIME:
0.157562
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
15.0
Sim
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
4.8
Sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:22:43) 
-- CODE:
acaiQtde = float(input("Quantidade de acai: "))
salgadoQtde = float(input("Quantidade de salgado: "))
valorPago = float(input("Valor pago pelo cliente: "))

acai = 24/1000
salgado = 3

valorTotal = (acai * acaiQtde) + (salgado * salgadoQtde)

if valorTotal <= valorPago:
	mensagem = 'Sim'
else:
	mensagem = 'Nao'


print (round(valorTotal,2))
print (mensagem)
-- OUTPUT:
15.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:22:59) 
-- CODE:
acaiQtde = float(input("Quantidade de acai: "))
salgadoQtde = float(input("Quantidade de salgado: "))
valorPago = float(input("Valor pago pelo cliente: "))

acai = 24/1000
salgado = 3

valorTotal = (acai * acaiQtde) + (salgado * salgadoQtde)

if valorTotal <= valorPago:
	mensagem = 'Sim'
else:
	mensagem = 'Nao'


print (round(valorTotal,2))
print (mensagem)
-- EXECUTION TIME:
0.158496
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
15.0
Sim
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
4.8
Sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:23:26) 
-- CODE:
acaiQtde = float(input("Quantidade de acai: "))
salgadoQtde = float(input("Quantidade de salgado: "))
valorPago = float(input("Valor pago pelo cliente: "))

acai = 24/1000
salgado = 3

valorTotal = (acai * acaiQtde) + (salgado * salgadoQtde)

if valorTotal <= valorPago:
	print ("Sim")
else:
	print ("Nao")


print (round(valorTotal,2))
print (mensagem)
-- EXECUTION TIME:
0.221837
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2974/main.py", line 17, in <module>
    print (mensagem)
NameError: name 'mensagem' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:23:43) 
-- CODE:
acaiQtde = float(input("Quantidade de acai: "))
salgadoQtde = float(input("Quantidade de salgado: "))
valorPago = float(input("Valor pago pelo cliente: "))

acai = 24/1000
salgado = 3

valorTotal = (acai * acaiQtde) + (salgado * salgadoQtde)

if valorTotal <= valorPago:
	print ("Nao")
else:
	print ("Sim")


print (round(valorTotal,2))
print (mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print (mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:23:59) 
-- CODE:
acaiQtde = float(input("Quantidade de acai: "))
salgadoQtde = float(input("Quantidade de salgado: "))
valorPago = float(input("Valor pago pelo cliente: "))

acai = 24/1000
salgado = 3

valorTotal = (acai * acaiQtde) + (salgado * salgadoQtde)

if valorTotal <= valorPago:
	print ("Nao")
else:
	print ("Sim")


print (round(valorTotal,2))

-- EXECUTION TIME:
0.186618
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
Nao
15.0
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
Nao
6.0
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
Nao
4.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:24:10) 
-- CODE:
acaiQtde = float(input("Quantidade de acai: "))
salgadoQtde = float(input("Quantidade de salgado: "))
valorPago = float(input("Valor pago pelo cliente: "))

acai = 24/1000
salgado = 3

valorTotal = (acai * acaiQtde) + (salgado * salgadoQtde)

if valorTotal <= valorPago:
	print ("Sim")
else:
	print ("Não")


print (round(valorTotal,2))

-- EXECUTION TIME:
0.190276
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
Sim
15.0
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
Sim
6.0
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
Sim
4.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:24:16) 
-- CODE:
acaiQtde = float(input("Quantidade de acai: "))
salgadoQtde = float(input("Quantidade de salgado: "))
valorPago = float(input("Valor pago pelo cliente: "))

acai = 24/1000
salgado = 3

valorTotal = (acai * acaiQtde) + (salgado * salgadoQtde)

if valorTotal <= valorPago:
	print ("Sim")
else:
	print ("Nao")


print (round(valorTotal,2))

-- OUTPUT:
Sim
15.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:24:29) 
-- CODE:
acaiQtde = float(input("Quantidade de acai: "))
salgadoQtde = float(input("Quantidade de salgado: "))
valorPago = float(input("Valor pago pelo cliente: "))

acai = 24/1000
salgado = 3

valorTotal = (acai * acaiQtde) + (salgado * salgadoQtde)

if valorTotal <= valorPago:
	print ("Sim")
else:
	print ("Nao")


print (round(valorTotal,2))

-- EXECUTION TIME:
0.135354
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
Sim
15.0
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
Sim
6.0
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
Sim
4.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:25:08) 
-- CODE:
acaiQtde = float(input("Quantidade de acai: "))
salgadoQtde = int(input("Quantidade de salgado: "))
valorPago = float(input("Valor pago pelo cliente: "))

acai = 24/1000
salgado = 3

valorTotal = (acai * acaiQtde) + (salgado * salgadoQtde)

if valorTotal <= valorPago:
	print ("Sim")
else:
	print ("Nao")

print (round(valorTotal,2))

-- EXECUTION TIME:
0.114927
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
Sim
15.0
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
Sim
6.0
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
Sim
4.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:25:35) 
-- CODE:
acaiQtde = float(input("Quantidade de acai: "))
salgadoQtde = int(input("Quantidade de salgado: "))
valorPago = float(input("Valor pago pelo cliente: "))

acai = 24/1000
print(acai)
salgado = 3

valorTotal = (acai * acaiQtde) + (salgado * salgadoQtde)

if valorTotal <= valorPago:
	print ("Sim")
else:
	print ("Nao")

print (round(valorTotal,2))

-- OUTPUT:
0.024
Sim
15.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:25:57) 
-- CODE:
acaiQtde = float(input("Quantidade de acai: "))
salgadoQtde = int(input("Quantidade de salgado: "))
valorPago = float(input("Valor pago pelo cliente: "))

acai = 0.024
salgado = 3

valorTotal = (acai * acaiQtde) + (salgado * salgadoQtde)

if valorTotal <= valorPago:
	print ("Sim")
else:
	print ("Nao")

print (round(valorTotal,2))

-- OUTPUT:
Sim
15.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:26:47) 
-- CODE:
acaiQtde = float(input("Quantidade de acai: "))
salgadoQtde = int(input("Quantidade de salgado: "))
valorPago = float(input("Valor pago pelo cliente: "))

acai = 0.024
salgado = 3

valorTotal = (acai * acaiQtde) + (salgado * salgadoQtde)

if valorTotal <= valorPago:
	mensagem = 'Sim'
else:
	mensagem = 'Nao'

print (round(valorTotal,2))
print (mensagem)

-- EXECUTION TIME:
0.147098
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
15.0
Sim
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
4.8
Sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:26:50) 
-- CODE:
acaiQtde = float(input("Quantidade de acai: "))
salgadoQtde = int(input("Quantidade de salgado: "))
valorPago = float(input("Valor pago pelo cliente: "))

acai = 0.024
salgado = 3

valorTotal = (acai * acaiQtde) + (salgado * salgadoQtde)

if valorTotal <= valorPago:
	mensagem = 'Sim'
else:
	mensagem = 'Nao'

print (round(valorTotal,2))
print (mensagem)

-- OUTPUT:
15.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:27:10) 
-- CODE:
acaiQtde = float(input("Quantidade de acai: "))
salgadoQtde = int(input("Quantidade de salgado: "))
valorPago = float(input("Valor pago pelo cliente: "))

acai = 0.024
salgado = 3

valorTotal = (acai * acaiQtde) + (salgado * salgadoQtde)

if valorTotal <= valorPago:
	mensagem = 'Sim'
else:
	mensagem = 'Nao'

print (round(valorTotal,2))
print (mensagem)

-- EXECUTION TIME:
0.202693
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
15.0
Sim
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
4.8
Sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:28:37) 
-- CODE:
acaiQtde = float(input("Quantidade de acai: "))
salgadoQtde = int(input("Quantidade de salgado: "))
valorPago = float(input("Valor pago pelo cliente: "))

acai = 0.024
salgado = 3

valorTotal = (acai * acaiQtde) + (salgado * salgadoQtde)

if valorPago > valorTotal:
	mensagem = 'Sim'
else:
	mensagem = 'Nao'

print (round(valorTotal,2))
print (mensagem)

-- EXECUTION TIME:
0.145347
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
15.0
Sim
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
4.8
Nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
